--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <h1 class="mb-0">
                         Sean
                         <span class="text-primary">Brasil</span>
-                        <h4>He/Him</h4>
+                        <h4>Pronouns: He/Him</h4>
                     </h1>
                     <div class="subheading mb-5">
                         4th year student at Conestoga Collage - 
