Added h5 for contact

--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
                         <a href="mailto:Sean.brasil70@gmail.com">Sean.brasil70@gmail.com</a>
                     </div>
                     <p class="lead mb-5">A young programmer getting himself out there.</p>
+                    <h5>Lets Talk</h5>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/sean-brasil-2963a11b9/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/scoutmaster118"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="mailto:sean.brasil70@gmail.com?subject=Mail from GITHUB Portfolio"><i class="fa-brands fa-google"></i></a>
+                        <a class="social-icon" href="tel:123-456-7890"><i class="fa-solid fa-phone"></i></a>
                     </div>
                 </div>
             </section>
@@ -174,6 +177,7 @@
             <hr class="m-0" />
             <section class="resume-section" id="handywork">
                 <div class="resume-section-content">
+                    <h2>My Handywork</h2>
                     <div class="container overflow-hidden">
                         <div class="row g-3">
                           <div class="col-6" >
