More spelling and writing changes

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>I enjoy spending my time outdoors, camping year round and finding new places to hike. 
                         I try to find new places to Hike, bike and kayak with friends and family.</p>
-                    <p class="mb-0">When confined indoors, I follow a number of sci-fi and fantasy genre movies, 
-                        games and television shows, I am an self proclaimed expert chef and comedian.</p>
+                    <p class="mb-0">When confined indoors, I follow a number of sci-fi and fantasy genre plots and narratives.
+                         I am an self proclaimed expert chef and comedian.</p>
                 </div>
             </section>
             <hr class="m-0" />
