made a few edits to my small bio and change a category

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#handiwork">My Handiwork</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#handiwork">My Past work</a></li>
                     <!--<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>-->
                 </ul>
             </div>
@@ -54,7 +54,7 @@
                     <div class="subheading mb-5">
                         4th year student at Conestoga college
                     </div>
-                    <p class="lead mb-5">A young programmer getting himself out there.</p>
+                    <p class="lead mb-5">A young professional getting himself out there and seeking professional connections.</p>
                     <h5>Lets Talk</h5>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/sean-brasil-2963a11b9/"><i class="fab fa-linkedin-in"></i></a>
@@ -183,7 +183,7 @@
             <hr class="m-0" />
             <section class="resume-section" id="handiwork">
                 <div class="resume-section-content">
-                    <h2>My Handiwork</h2>
+                    <h2>My Past work</h2>
                     <div class="container overflow-hidden">
                         <div class="row g-3">
                           <div class="col-6" >
