--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <h4>Pronouns: He/Him</h4>
                     </h1>
                     <div class="subheading mb-5">
-                        4th year student at Conestoga college
+                        2024 Grad of IT Innovation and Design from Conestoga College 
                     </div>
                     <p class="lead mb-5">A young professional getting himself out there and seeking professional connections.</p>
                     <h5>Lets Talk</h5>
