--- a/index.html
+++ b/index.html
@@ -130,10 +130,11 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Conestoga college</h3>
                             <div class="subheading mb-3">IT Innovation and Design</div>
+                            <div class="subheading mb-3">Graduated with with High Distinction</div>
                             <div>Computer Science - Web Development</div>
                         
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2019 - Expected graduation: June 2024</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2019 - June 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
