--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
                             <a href="https://github.com/scoutmaster118/SBrasil-A4-Website">
                             <div class="p-3 border bg-light">college assignment from second year</div></a>
                           </div>
+                            <div class="col-6">
+                                <a href="https://github.com/conniebean/dog-gone-it">
+                            <div class="p-3 border bg-light">DogGoneIT Capstone project with classmates Connie K and Nolan R</div></a>
+                                <img src="assets/img/DogGoneIT.png" alt="screenshot of A&A website" width="100%"></a>    
+                          </div>
                         </div>
                       </div>
                 </div>
